# ai-chat-ui

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  eslint.config.ts  lefthook.yml  package.json  pnpm-lock.yaml  vite.config.ts
.github/instructions/: main.instructions.md
.github/workflows/: ci.yml
agent/: README.md  pyproject.toml
agent/chatbot/: agent.py  arxiv_agent.py  chat_router.py  chat_schemas.py  lifespan.py  server.py  settings.py  sql_agent.py
agent/chatbot/db/: __init__.py  json_types.py  message_codec.py  models.py  runtime.py  service.py
agent/chatbot/streaming/: redis_stream.py
agent/chatbot/tasks/: __init__.py  agent_registry.py  broker.py  run_agent_task.py  worker.py
agent/tests/: conftest.py  test_chat_router.py  test_chat_stream_resume.py  test_db_service.py  test_message_codec.py  test_redis_stream_integration.py  test_run_agent_task.py
specs/: fullstack-production-architecture-plan.md  pydantic-ai-metadata-rehydration-issue.md
src/: App.tsx  Chat.tsx  Message.test.tsx  Message.tsx  Part.tsx  Tool.tsx  main.tsx  router.test.tsx  router.tsx  types.ts
src/components/: agent-chat-data-panel-layout.tsx  agent-chat-top-panel-layout.tsx  app-sidebar.tsx  sql-result-table.tsx
src/components/ai-elements/: confirmation.tsx  conversation.tsx  model-selector.tsx  prompt-input.tsx  tool.tsx
src/components/ui/: command.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  input-group.tsx  resizable.tsx  select.tsx  spinner.tsx  tooltip.tsx
src/features/: agent-data-panel-plugin.ts  agent-top-panel-plugin.ts
src/features/arxiv-agent/: arxiv-data-panel-plugin.tsx  arxiv-top-panel-plugin.tsx
src/features/sql-agent/: sql-data-panel.tsx
src/hooks/: useChatSubmit.test.tsx  useChatSubmit.ts  useConversationChatState.test.tsx  useConversationChatState.ts  useConversationIdFromUrl.tsx
src/lib/: api.test.ts  api.ts  tool-approval-labels.test.ts  tool-approval-labels.ts  tool-icons.tsx
